{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 26,
  "lineage": "2f6d7a10-d32c-3395-2e72-c75323e4e7d2",
  "resources": [
    {
      "module": "module.hashistack",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:696405918666:vpc/vpc-e5e9929d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-186a7b72",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-17fa8a6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-e5e9929d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-361e3a4d",
            "owner_id": "696405918666"
          }
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_elb",
      "name": "server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:696405918666:loadbalancer/mhc-mws-aws-server-lb",
            "availability_zones": [
              "us-west-2a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "mhc-mws-aws-server-lb-1939387473.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:4646",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "mhc-mws-aws-server-lb",
            "idle_timeout": 60,
            "instances": [
              "i-011c60b1da8aedac0"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 4646,
                "instance_protocol": "http",
                "lb_port": 4646,
                "lb_protocol": "http"
              },
              {
                "instance_port": 8500,
                "instance_protocol": "http",
                "lb_port": 8500,
                "lb_protocol": "http"
              }
            ],
            "name": "mhc-mws-aws-server-lb",
            "security_groups": [
              "sg-0b982cff816381b65"
            ],
            "source_security_group": "696405918666/mhc-mws-aws-server-lb",
            "source_security_group_id": "sg-0b982cff816381b65",
            "subnets": [
              "subnet-ab0cd8d3"
            ],
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_instance.server",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009611802f936cef9",
            "arn": "arn:aws:ec2:us-west-2:696405918666:instance/i-0e825c0fb961fffc9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0bd3142b19cae5882",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mhc-mws-aws20240426233415369600000002",
            "id": "i-0e825c0fb961fffc9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "support_consul_dev-access-key-mikael",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b1e83f13c419eb4",
            "private_dns": "ip-172-31-31-126.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.126",
            "public_dns": "ec2-35-88-159-171.us-west-2.compute.amazonaws.com",
            "public_ip": "35.88.159.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e34ded662df5c556",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mhc-mws-aws"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ab0cd8d3",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "mhc-mws-aws-client-0"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "mhc-mws-aws-client-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09a75537eb0fcb88c"
            ]
          },
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_instance.server",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009611802f936cef9",
            "arn": "arn:aws:ec2:us-west-2:696405918666:instance/i-0e4595961c61468d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0a6126c241475def4",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mhc-mws-aws20240426233415369600000002",
            "id": "i-0e4595961c61468d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "support_consul_dev-access-key-mikael",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-060efbb840e2a1732",
            "private_dns": "ip-172-31-26-213.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.213",
            "public_dns": "ec2-52-41-112-227.us-west-2.compute.amazonaws.com",
            "public_ip": "52.41.112.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0713b8bdad44ec6ea",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mhc-mws-aws"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ab0cd8d3",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "mhc-mws-aws-client-1"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "mhc-mws-aws-client-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09a75537eb0fcb88c"
            ]
          },
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_instance.server",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009611802f936cef9",
            "arn": "arn:aws:ec2:us-west-2:696405918666:instance/i-011c60b1da8aedac0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mhc-mws-aws20240426233415369600000002",
            "id": "i-011c60b1da8aedac0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "support_consul_dev-access-key-mikael",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05585de0d9da53fe4",
            "private_dns": "ip-172-31-25-42.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.42",
            "public_dns": "ec2-35-94-17-134.us-west-2.compute.amazonaws.com",
            "public_ip": "35.94.17.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a4a965a3159ff34f",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mhc-mws-aws"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ab0cd8d3",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "mhc-mws-aws-server-0"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "mhc-mws-aws-server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09a75537eb0fcb88c"
            ]
          },
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:696405918666:security-group/sg-09a75537eb0fcb88c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a75537eb0fcb88c",
            "ingress": [
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 18080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 18080
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b982cff816381b65"
                ],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 50070,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50070
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 50075,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50075
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b982cff816381b65"
                ],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 9998,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "mhc-mws-aws",
            "name_prefix": "",
            "owner_id": "696405918666",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-e5e9929d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:696405918666:security-group/sg-0b982cff816381b65",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b982cff816381b65",
            "ingress": [
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "67.168.24.157/32"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              }
            ],
            "name": "mhc-mws-aws-server-lb",
            "name_prefix": "",
            "owner_id": "696405918666",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-e5e9929d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}